# cubrid-jira

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
docs/: fix-create-missing-custom-fields.md  reparent-subtasks-via-convert-wizard.md  reparent_via_wizard.py
src/cubrid_jira/: __init__.py  cache.py  cli.py  fields.py  http.py  legacy.py  markdown.py  session.py  walk.py  wizard.py
src/cubrid_jira_fetcher/: __init__.py  auth.py  cache.py  cli.py  client.py  search.py
tests/: conftest.py  test_cache.py  test_cli_reparent.py  test_cli_writes.py  test_client.py  test_jql.py  test_layering.py  test_live.py  test_output_json.py  test_payloads.py  test_wizard.py
