[project]
name = "cubrid-jira-fetcher"
version = "0.2.0"
description = "Fetch CUBRID JIRA issues (and their related issues) into markdown or JSON, with a cache-first lookup for AI agents. Now with create/comment/link/transition/assign writes."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
cubrid-jira = "cubrid_jira_fetcher.cli:main"
cubrid-jira-fetch = "cubrid_jira_fetcher.fetcher:main"
cubrid-jira-search = "cubrid_jira_fetcher.search:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cubrid_jira_fetcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: integration tests that hit the real JIRA server (skipped by default)",
]
