[project]
name = "cubrid-jira"
version = "1.0.0"
description = "CUBRID JIRA CLI: cache-first reads and dry-run-default writes (create / comment / link / transition / assign)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
cubrid-jira = "cubrid_jira.cli:main"
cubrid-jira-fetch = "cubrid_jira.legacy:fetch_main"
cubrid-jira-search = "cubrid_jira.legacy:search_main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cubrid_jira", "src/cubrid_jira_fetcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip `live` tests by default — override with `pytest -m live`.
addopts = "-q -m 'not live'"
markers = [
    "live: integration tests that hit the real JIRA server (skipped by default)",
]
filterwarnings = [
    # Suppress our own intentional deprecation warning when tests run.
    "ignore::DeprecationWarning:cubrid_jira_fetcher",
]
